--- a/Desafio Página de Receita/index.html
+++ b/Desafio Página de Receita/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de receira</title>
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
 </head>
 <body>
     <h1>Waffle Clássico</h1>
@@ -64,9 +69,11 @@
         </li>
     </ol>
 
-    <h1>Informações adicionais</h1>
-    <p>Sirva com mel, frutas ou geleia.</p>
-    <p>Essa receita foi executada e aprovada por <a href="#">Eu mesmo</a></p>
+    <footer>
+        <h1>Informações adicionais</h1>
+        <p>Sirva com mel, frutas ou geleia.</p>
+        <p>Essa receita foi executada e aprovada por <a href="#">Eu mesmo</a></p>
+    </footer>
     
 </body>
 </html>
