--- a/Desafio Página de Receita/index.html
+++ b/Desafio Página de Receita/index.html
@@ -50,7 +50,7 @@
         </ul>
         
         <ol>
-            <h2>Ingredientes</h2>
+            <h2>Modo de Preparo</h2>
             <li>
                 Peneire em um recipiente a farinha de trigo, o açúcar, o amido, o fermento e o sal. Reserve.
             </li>
